syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingService {
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
  rpc DeleteBillingAccount (DeleteBillingRequest) returns (DeleteBillingResponse);
}

message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}
message DeleteBillingRequest {
  string patientId = 1; // x√≥a theo patientId
}

message DeleteBillingResponse {
  string accountId = 1;
  string status = 2; // SUCCESS | NOT_FOUND | FAILED
}